reticulate 0.8 (unreleased)
--------------------------------------------------------------------------------

- Use grepl rather than endsWith for compatibility with R <= 3.2

- Add `import_from_package` function for importing Python modules located
  within R packages.

- Add `py_discover_config` function to determine which versions of Python 
  will be discovered and which one will be used by reticulate.

- Use inspect.getmro rather than __bases__ for enumerating the base classes
  of Python objects.
  
- Add `py_function_wrapper` and `py_function_docs` utility functions for 
  scaffolding R wrappers for Python functions.
  
  
reticulate 0.7
--------------------------------------------------------------------------------

Initial release to CRAN
