@@ -46,6 +46,7 @@ export(py_function_wrapper)
 export(py_get_attr)
 export(py_has_attr)
 export(py_is_null_xptr)
+export(py_last_error)
 export(py_list_attributes)
 export(py_module_available)
 export(py_numpy_available)
